# Autoboat

./: .gitignore  README.md
autoboat_ws/src/autoboat_joystick/: CMakeLists.txt  package.xml
autoboat_ws/src/autoboat_joystick/launch/: autoboat_joystick.launch
autoboat_ws/src/autoboat_joystick/msg/: Prop_msg.msg
autoboat_ws/src/autoboat_joystick/src/: joystick_node.cpp
autoboat_ws/src/autoboat_msgs/: CMakeLists.txt  package.xml
autoboat_ws/src/autoboat_msgs/launch/: autoboat.launch
autoboat_ws/src/autoboat_msgs/msg/: Prop_msg.msg
autoboat_ws/src/interface/: CMakeLists.txt  Plano  package.xml  teste_run_output.txt
autoboat_ws/src/interface/configs/: Arduinos.txt  Arduinos_teste.txt  ID_MSGS.txt  Serial_ports.txt
autoboat_ws/src/interface/ex_ino/: ex_ino.ino
autoboat_ws/src/interface/lib/: arduino_class.cpp  arduino_class.hpp  barco_class.cpp  barco_class.hpp  ros_functions.cpp  ros_functions.hpp  rs232_class.cpp  rs232_class.hpp  rs232lib.c  utils.cpp  utils.hpp
autoboat_ws/src/interface/msg/: Prop_msg.msg
autoboat_ws/src/interface/src/: main.cpp
autoboat_ws/src/interface/teste/: teste.ino
autoboat_ws/src/telemetria/: CMakeLists.txt  README.md  package.xml
autoboat_ws/src/telemetria/include/telemetria/: main_window.hpp  monit_node.hpp  ponteiro.hpp  teleop_node.hpp
autoboat_ws/src/telemetria/src/: main.cpp  main_window.cpp  monit_node.cpp  ponteiro.cpp  teleop_node.cpp
autoboat_ws/src/telemetria/ui/: main_window.ui
firmware/: Manipulador.ino  Mestre.ino
firmware/Chassi/: Chassi.ino
firmware/Chassi/Master/: Master.ino
firmware/Chassi/Testes/Master/: Master.ino  readme.txt
firmware/Chassi/Testes/Ultrassons/: Readme.txt
firmware/Chassi/Ultrassons/: teste_ultrasson.ino
firmware/Mestre/: Imu.cpp  Manipulador.cpp  Mestre.ino  Serial.cpp
telemetria/: .gitkeep  CMakeLists.txt  mainpage.dox  package.xml
telemetria/include/telemetria/: main_window.hpp  monit_node.hpp  teleop_node.hpp
telemetria/msg/: Prop_msg.msg  Stepper_msg.msg
telemetria/resources/: images.qrc
telemetria/src/: main.cpp  main_window.cpp  monit_node.cpp  teleop_node.cpp
telemetria/ui/: main_window.ui
