<?xml version="1.0"?>
<package>
  <name>autoboat_joystick</name>
  <version>0.0.0</version>
  <description>The autoboat_joystick package</description>

  <maintainer email="vittorfp@todo.todo">vittorfp</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>joy</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>joy</run_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>autoboat_msgs</build_depend>
  <run_depend>autoboat_msgs</run_depend>

  <export>

  </export>
</package>
